@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
skinparam classAttributeIconSize 0

class User {
    - email: String
    - phone: String
    - role: String
}

class SearchAdvertisementUI {
    + searchAdvertisement(category, municipality, keyWords)
}

class Advertisement {
    - id : String
    - title: String
    - designation : String
    - date: LocalDate
    - status : AdvertisementStatus
    + Advertisement(designation, status)
}

'class AdvertisementDTO {
'    - id : String
'    - designation : String
 '   + AdvertisementDTO()
'}

class AdvertisementController {
    + searchAdvertisement(category, municipality, keyWords)
}

class AdvertisementService {
    + searchAdvertisement(category, municipality, keyWords)
}

class AdvertisementRepository {
    + searchAdvertisement(category, municipality, keyWords)
}

'class AdvertisementMapper {
'    + toEntity()
'    + toDTO()
'}

User .> SearchAdvertisementUI : Requests
SearchAdvertisementUI .> AdvertisementController
AdvertisementController ..> AdvertisementService
AdvertisementService ..> AdvertisementRepository
AdvertisementRepository "1" --> "*" Advertisement : advertisement



@enduml
